project/2/y.output
Terminals which are not used

   RESERVED


State 107 conflicts: 13 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: PACKAGE ID SEMICOLON Declarations

    2 Declarations: VarDeclaration SEMICOLON Declarations
    3             | FuncDeclaration SEMICOLON Declarations
    4             | /* empty */

    5 Type: INT
    6     | FLOAT32
    7     | BOOL
    8     | STRING

    9 VarDeclaration: VAR VarSpec
   10               | VAR LPAR VarSpec SEMICOLON RPAR

   11 VarSpec: ID Aux1 Type

   12 Aux1: COMMA ID Aux1
   13     | /* empty */

   14 FuncDeclaration: FUNC ID LPAR ParametersOpt RPAR TypeOpt FuncBody

   15 ParametersOpt: Parameters
   16              | /* empty */

   17 TypeOpt: Type
   18        | /* empty */

   19 Parameters: ID Type Aux2

   20 Aux2: COMMA ID Type
   21     | /* empty */

   22 FuncBody: LBRACE VarsAndStatements RBRACE

   23 VarsAndStatements: VarsAndStatements Aux7 SEMICOLON
   24                  | /* empty */

   25 Aux7: VarDeclaration
   26     | Statement
   27     | /* empty */

   28 Statement: ID ASSIGN Expr
   29          | LBRACE Aux3 RBRACE
   30          | IF Expr LBRACE Aux3 RBRACE Aux4
   31          | FOR ExprOpt LBRACE Aux3 RBRACE
   32          | RETURN ExprOpt
   33          | FuncInvocation
   34          | ParseArgs
   35          | PRINT LPAR Aux6 RPAR

   36 Aux6: STRLIT
   37     | Expr

   38 ExprOpt: Expr
   39        | /* empty */

   40 Aux3: Statement SEMICOLON Aux3
   41     | /* empty */

   42 Aux4: ELSE LBRACE Aux3 RBRACE
   43     | /* empty */

   44 ParseArgs: ID COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR

   45 FuncInvocation: ID LPAR Aux40 RPAR

   46 Aux40: Expr Aux41
   47      | /* empty */

   48 Aux41: COMMA Expr Aux41
   49      | /* empty */

   50 Expr: INTLIT
   51     | REALLIT
   52     | ID
   53     | FuncInvocation
   54     | LPAR Expr RPAR
   55     | NOT Expr
   56     | MINUS Expr
   57     | PLUS Expr
   58     | Expr Aux8 Expr

   59 Aux8: PLUS
   60     | MINUS
   61     | STAR
   62     | DIV
   63     | MOD
   64     | OR
   65     | AND
   66     | LT
   67     | GT
   68     | EQ
   69     | NE
   70     | LE
   71     | GE


Terminals, with rules where they appear

$end (0) 0
error (256)
SEMICOLON (258) 1 2 3 10 23 40
BLANKID (259) 44
PACKAGE (260) 1
RETURN (261) 32
AND (262) 65
ASSIGN (263) 28 44
STAR (264) 61
COMMA (265) 12 20 44 48
DIV (266) 62
EQ (267) 68
GE (268) 71
GT (269) 67
LBRACE (270) 22 29 30 31 42
LE (271) 70
LPAR (272) 10 14 35 44 45 54
LSQ (273) 44
LT (274) 66
MINUS (275) 56 60
MOD (276) 63
NE (277) 69
NOT (278) 55
OR (279) 64
PLUS (280) 57 59
RBRACE (281) 22 29 30 31 42
RPAR (282) 10 14 35 44 45 54
RSQ (283) 44
ELSE (284) 42
FOR (285) 31
IF (286) 30
VAR (287) 9 10
INT (288) 5
FLOAT32 (289) 6
BOOL (290) 7
STRING (291) 8
PRINT (292) 35
PARSEINT (293) 44
FUNC (294) 14
CMDARGS (295) 44
RESERVED (296)
STRLIT (297) 36
INTLIT (298) 50
ID (299) 1 11 12 14 19 20 28 44 45 52
REALLIT (300) 51
UNARY (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
Program (48)
    on left: 1, on right: 0
Declarations (49)
    on left: 2 3 4, on right: 1 2 3
Type (50)
    on left: 5 6 7 8, on right: 11 17 19 20
VarDeclaration (51)
    on left: 9 10, on right: 2 25
VarSpec (52)
    on left: 11, on right: 9 10
Aux1 (53)
    on left: 12 13, on right: 11 12
FuncDeclaration (54)
    on left: 14, on right: 3
ParametersOpt (55)
    on left: 15 16, on right: 14
TypeOpt (56)
    on left: 17 18, on right: 14
Parameters (57)
    on left: 19, on right: 15
Aux2 (58)
    on left: 20 21, on right: 19
FuncBody (59)
    on left: 22, on right: 14
VarsAndStatements (60)
    on left: 23 24, on right: 22 23
Aux7 (61)
    on left: 25 26 27, on right: 23
Statement (62)
    on left: 28 29 30 31 32 33 34 35, on right: 26 40
Aux6 (63)
    on left: 36 37, on right: 35
ExprOpt (64)
    on left: 38 39, on right: 31 32
Aux3 (65)
    on left: 40 41, on right: 29 30 31 40 42
Aux4 (66)
    on left: 42 43, on right: 30
ParseArgs (67)
    on left: 44, on right: 34
FuncInvocation (68)
    on left: 45, on right: 33 53
Aux40 (69)
    on left: 46 47, on right: 45
Aux41 (70)
    on left: 48 49, on right: 46 48
Expr (71)
    on left: 50 51 52 53 54 55 56 57 58, on right: 28 30 37 38 44 46
    48 54 55 56 57 58
Aux8 (72)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71,
    on right: 58


state 0

    0 $accept: . Program $end

    PACKAGE  shift, and go to state 1

    Program  go to state 2


state 1

    1 Program: PACKAGE . ID SEMICOLON Declarations

    ID  shift, and go to state 3


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


state 3

    1 Program: PACKAGE ID . SEMICOLON Declarations

    SEMICOLON  shift, and go to state 5


state 4

    0 $accept: Program $end .

    $default  accept


state 5

    1 Program: PACKAGE ID SEMICOLON . Declarations

    VAR   shift, and go to state 6
    FUNC  shift, and go to state 7

    $default  reduce using rule 4 (Declarations)

    Declarations     go to state 8
    VarDeclaration   go to state 9
    FuncDeclaration  go to state 10


state 6

    9 VarDeclaration: VAR . VarSpec
   10               | VAR . LPAR VarSpec SEMICOLON RPAR

    LPAR  shift, and go to state 11
    ID    shift, and go to state 12

    VarSpec  go to state 13


state 7

   14 FuncDeclaration: FUNC . ID LPAR ParametersOpt RPAR TypeOpt FuncBody

    ID  shift, and go to state 14


state 8

    1 Program: PACKAGE ID SEMICOLON Declarations .

    $default  reduce using rule 1 (Program)


state 9

    2 Declarations: VarDeclaration . SEMICOLON Declarations

    SEMICOLON  shift, and go to state 15


state 10

    3 Declarations: FuncDeclaration . SEMICOLON Declarations

    SEMICOLON  shift, and go to state 16


state 11

   10 VarDeclaration: VAR LPAR . VarSpec SEMICOLON RPAR

    ID  shift, and go to state 12

    VarSpec  go to state 17


state 12

   11 VarSpec: ID . Aux1 Type

    COMMA  shift, and go to state 18

    $default  reduce using rule 13 (Aux1)

    Aux1  go to state 19


state 13

    9 VarDeclaration: VAR VarSpec .

    $default  reduce using rule 9 (VarDeclaration)


state 14

   14 FuncDeclaration: FUNC ID . LPAR ParametersOpt RPAR TypeOpt FuncBody

    LPAR  shift, and go to state 20


state 15

    2 Declarations: VarDeclaration SEMICOLON . Declarations

    VAR   shift, and go to state 6
    FUNC  shift, and go to state 7

    $default  reduce using rule 4 (Declarations)

    Declarations     go to state 21
    VarDeclaration   go to state 9
    FuncDeclaration  go to state 10


state 16

    3 Declarations: FuncDeclaration SEMICOLON . Declarations

    VAR   shift, and go to state 6
    FUNC  shift, and go to state 7

    $default  reduce using rule 4 (Declarations)

    Declarations     go to state 22
    VarDeclaration   go to state 9
    FuncDeclaration  go to state 10


state 17

   10 VarDeclaration: VAR LPAR VarSpec . SEMICOLON RPAR

    SEMICOLON  shift, and go to state 23


state 18

   12 Aux1: COMMA . ID Aux1

    ID  shift, and go to state 24


state 19

   11 VarSpec: ID Aux1 . Type

    INT      shift, and go to state 25
    FLOAT32  shift, and go to state 26
    BOOL     shift, and go to state 27
    STRING   shift, and go to state 28

    Type  go to state 29


state 20

   14 FuncDeclaration: FUNC ID LPAR . ParametersOpt RPAR TypeOpt FuncBody

    ID  shift, and go to state 30

    $default  reduce using rule 16 (ParametersOpt)

    ParametersOpt  go to state 31
    Parameters     go to state 32


state 21

    2 Declarations: VarDeclaration SEMICOLON Declarations .

    $default  reduce using rule 2 (Declarations)


state 22

    3 Declarations: FuncDeclaration SEMICOLON Declarations .

    $default  reduce using rule 3 (Declarations)


state 23

   10 VarDeclaration: VAR LPAR VarSpec SEMICOLON . RPAR

    RPAR  shift, and go to state 33


state 24

   12 Aux1: COMMA ID . Aux1

    COMMA  shift, and go to state 18

    $default  reduce using rule 13 (Aux1)

    Aux1  go to state 34


state 25

    5 Type: INT .

    $default  reduce using rule 5 (Type)


state 26

    6 Type: FLOAT32 .

    $default  reduce using rule 6 (Type)


state 27

    7 Type: BOOL .

    $default  reduce using rule 7 (Type)


state 28

    8 Type: STRING .

    $default  reduce using rule 8 (Type)


state 29

   11 VarSpec: ID Aux1 Type .

    $default  reduce using rule 11 (VarSpec)


state 30

   19 Parameters: ID . Type Aux2

    INT      shift, and go to state 25
    FLOAT32  shift, and go to state 26
    BOOL     shift, and go to state 27
    STRING   shift, and go to state 28

    Type  go to state 35


state 31

   14 FuncDeclaration: FUNC ID LPAR ParametersOpt . RPAR TypeOpt FuncBody

    RPAR  shift, and go to state 36


state 32

   15 ParametersOpt: Parameters .

    $default  reduce using rule 15 (ParametersOpt)


state 33

   10 VarDeclaration: VAR LPAR VarSpec SEMICOLON RPAR .

    $default  reduce using rule 10 (VarDeclaration)


state 34

   12 Aux1: COMMA ID Aux1 .

    $default  reduce using rule 12 (Aux1)


state 35

   19 Parameters: ID Type . Aux2

    COMMA  shift, and go to state 37

    $default  reduce using rule 21 (Aux2)

    Aux2  go to state 38


state 36

   14 FuncDeclaration: FUNC ID LPAR ParametersOpt RPAR . TypeOpt FuncBody

    INT      shift, and go to state 25
    FLOAT32  shift, and go to state 26
    BOOL     shift, and go to state 27
    STRING   shift, and go to state 28

    $default  reduce using rule 18 (TypeOpt)

    Type     go to state 39
    TypeOpt  go to state 40


state 37

   20 Aux2: COMMA . ID Type

    ID  shift, and go to state 41


state 38

   19 Parameters: ID Type Aux2 .

    $default  reduce using rule 19 (Parameters)


state 39

   17 TypeOpt: Type .

    $default  reduce using rule 17 (TypeOpt)


state 40

   14 FuncDeclaration: FUNC ID LPAR ParametersOpt RPAR TypeOpt . FuncBody

    LBRACE  shift, and go to state 42

    FuncBody  go to state 43


state 41

   20 Aux2: COMMA ID . Type

    INT      shift, and go to state 25
    FLOAT32  shift, and go to state 26
    BOOL     shift, and go to state 27
    STRING   shift, and go to state 28

    Type  go to state 44


state 42

   22 FuncBody: LBRACE . VarsAndStatements RBRACE

    $default  reduce using rule 24 (VarsAndStatements)

    VarsAndStatements  go to state 45


state 43

   14 FuncDeclaration: FUNC ID LPAR ParametersOpt RPAR TypeOpt FuncBody .

    $default  reduce using rule 14 (FuncDeclaration)


state 44

   20 Aux2: COMMA ID Type .

    $default  reduce using rule 20 (Aux2)


state 45

   22 FuncBody: LBRACE VarsAndStatements . RBRACE
   23 VarsAndStatements: VarsAndStatements . Aux7 SEMICOLON

    RETURN  shift, and go to state 46
    LBRACE  shift, and go to state 47
    RBRACE  shift, and go to state 48
    FOR     shift, and go to state 49
    IF      shift, and go to state 50
    VAR     shift, and go to state 6
    PRINT   shift, and go to state 51
    ID      shift, and go to state 52

    $default  reduce using rule 27 (Aux7)

    VarDeclaration  go to state 53
    Aux7            go to state 54
    Statement       go to state 55
    ParseArgs       go to state 56
    FuncInvocation  go to state 57


state 46

   32 Statement: RETURN . ExprOpt

    LPAR     shift, and go to state 58
    MINUS    shift, and go to state 59
    NOT      shift, and go to state 60
    PLUS     shift, and go to state 61
    INTLIT   shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64

    $default  reduce using rule 39 (ExprOpt)

    ExprOpt         go to state 65
    FuncInvocation  go to state 66
    Expr            go to state 67


state 47

   29 Statement: LBRACE . Aux3 RBRACE

    RETURN  shift, and go to state 46
    LBRACE  shift, and go to state 47
    FOR     shift, and go to state 49
    IF      shift, and go to state 50
    PRINT   shift, and go to state 51
    ID      shift, and go to state 52

    $default  reduce using rule 41 (Aux3)

    Statement       go to state 68
    Aux3            go to state 69
    ParseArgs       go to state 56
    FuncInvocation  go to state 57


state 48

   22 FuncBody: LBRACE VarsAndStatements RBRACE .

    $default  reduce using rule 22 (FuncBody)


state 49

   31 Statement: FOR . ExprOpt LBRACE Aux3 RBRACE

    LPAR     shift, and go to state 58
    MINUS    shift, and go to state 59
    NOT      shift, and go to state 60
    PLUS     shift, and go to state 61
    INTLIT   shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64

    $default  reduce using rule 39 (ExprOpt)

    ExprOpt         go to state 70
    FuncInvocation  go to state 66
    Expr            go to state 67


state 50

   30 Statement: IF . Expr LBRACE Aux3 RBRACE Aux4

    LPAR     shift, and go to state 58
    MINUS    shift, and go to state 59
    NOT      shift, and go to state 60
    PLUS     shift, and go to state 61
    INTLIT   shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64

    FuncInvocation  go to state 66
    Expr            go to state 71


state 51

   35 Statement: PRINT . LPAR Aux6 RPAR

    LPAR  shift, and go to state 72


state 52

   28 Statement: ID . ASSIGN Expr
   44 ParseArgs: ID . COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
   45 FuncInvocation: ID . LPAR Aux40 RPAR

    ASSIGN  shift, and go to state 73
    COMMA   shift, and go to state 74
    LPAR    shift, and go to state 75


state 53

   25 Aux7: VarDeclaration .

    $default  reduce using rule 25 (Aux7)


state 54

   23 VarsAndStatements: VarsAndStatements Aux7 . SEMICOLON

    SEMICOLON  shift, and go to state 76


state 55

   26 Aux7: Statement .

    $default  reduce using rule 26 (Aux7)


state 56

   34 Statement: ParseArgs .

    $default  reduce using rule 34 (Statement)


state 57

   33 Statement: FuncInvocation .

    $default  reduce using rule 33 (Statement)


state 58

   54 Expr: LPAR . Expr RPAR

    LPAR     shift, and go to state 58
    MINUS    shift, and go to state 59
    NOT      shift, and go to state 60
    PLUS     shift, and go to state 61
    INTLIT   shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64

    FuncInvocation  go to state 66
    Expr            go to state 77


state 59

   56 Expr: MINUS . Expr

    LPAR     shift, and go to state 58
    MINUS    shift, and go to state 59
    NOT      shift, and go to state 60
    PLUS     shift, and go to state 61
    INTLIT   shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64

    FuncInvocation  go to state 66
    Expr            go to state 78


state 60

   55 Expr: NOT . Expr

    LPAR     shift, and go to state 58
    MINUS    shift, and go to state 59
    NOT      shift, and go to state 60
    PLUS     shift, and go to state 61
    INTLIT   shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64

    FuncInvocation  go to state 66
    Expr            go to state 79


state 61

   57 Expr: PLUS . Expr

    LPAR     shift, and go to state 58
    MINUS    shift, and go to state 59
    NOT      shift, and go to state 60
    PLUS     shift, and go to state 61
    INTLIT   shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64

    FuncInvocation  go to state 66
    Expr            go to state 80


state 62

   50 Expr: INTLIT .

    $default  reduce using rule 50 (Expr)


state 63

   45 FuncInvocation: ID . LPAR Aux40 RPAR
   52 Expr: ID .

    LPAR  shift, and go to state 75

    $default  reduce using rule 52 (Expr)


state 64

   51 Expr: REALLIT .

    $default  reduce using rule 51 (Expr)


state 65

   32 Statement: RETURN ExprOpt .

    $default  reduce using rule 32 (Statement)


state 66

   53 Expr: FuncInvocation .

    $default  reduce using rule 53 (Expr)


state 67

   38 ExprOpt: Expr .
   58 Expr: Expr . Aux8 Expr

    AND    shift, and go to state 81
    STAR   shift, and go to state 82
    DIV    shift, and go to state 83
    EQ     shift, and go to state 84
    GE     shift, and go to state 85
    GT     shift, and go to state 86
    LE     shift, and go to state 87
    LT     shift, and go to state 88
    MINUS  shift, and go to state 89
    MOD    shift, and go to state 90
    NE     shift, and go to state 91
    OR     shift, and go to state 92
    PLUS   shift, and go to state 93

    $default  reduce using rule 38 (ExprOpt)

    Aux8  go to state 94


state 68

   40 Aux3: Statement . SEMICOLON Aux3

    SEMICOLON  shift, and go to state 95


state 69

   29 Statement: LBRACE Aux3 . RBRACE

    RBRACE  shift, and go to state 96


state 70

   31 Statement: FOR ExprOpt . LBRACE Aux3 RBRACE

    LBRACE  shift, and go to state 97


state 71

   30 Statement: IF Expr . LBRACE Aux3 RBRACE Aux4
   58 Expr: Expr . Aux8 Expr

    AND     shift, and go to state 81
    STAR    shift, and go to state 82
    DIV     shift, and go to state 83
    EQ      shift, and go to state 84
    GE      shift, and go to state 85
    GT      shift, and go to state 86
    LBRACE  shift, and go to state 98
    LE      shift, and go to state 87
    LT      shift, and go to state 88
    MINUS   shift, and go to state 89
    MOD     shift, and go to state 90
    NE      shift, and go to state 91
    OR      shift, and go to state 92
    PLUS    shift, and go to state 93

    Aux8  go to state 94


state 72

   35 Statement: PRINT LPAR . Aux6 RPAR

    LPAR     shift, and go to state 58
    MINUS    shift, and go to state 59
    NOT      shift, and go to state 60
    PLUS     shift, and go to state 61
    STRLIT   shift, and go to state 99
    INTLIT   shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64

    Aux6            go to state 100
    FuncInvocation  go to state 66
    Expr            go to state 101


state 73

   28 Statement: ID ASSIGN . Expr

    LPAR     shift, and go to state 58
    MINUS    shift, and go to state 59
    NOT      shift, and go to state 60
    PLUS     shift, and go to state 61
    INTLIT   shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64

    FuncInvocation  go to state 66
    Expr            go to state 102


state 74

   44 ParseArgs: ID COMMA . BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR

    BLANKID  shift, and go to state 103


state 75

   45 FuncInvocation: ID LPAR . Aux40 RPAR

    LPAR     shift, and go to state 58
    MINUS    shift, and go to state 59
    NOT      shift, and go to state 60
    PLUS     shift, and go to state 61
    INTLIT   shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64

    $default  reduce using rule 47 (Aux40)

    FuncInvocation  go to state 66
    Aux40           go to state 104
    Expr            go to state 105


state 76

   23 VarsAndStatements: VarsAndStatements Aux7 SEMICOLON .

    $default  reduce using rule 23 (VarsAndStatements)


state 77

   54 Expr: LPAR Expr . RPAR
   58     | Expr . Aux8 Expr

    AND    shift, and go to state 81
    STAR   shift, and go to state 82
    DIV    shift, and go to state 83
    EQ     shift, and go to state 84
    GE     shift, and go to state 85
    GT     shift, and go to state 86
    LE     shift, and go to state 87
    LT     shift, and go to state 88
    MINUS  shift, and go to state 89
    MOD    shift, and go to state 90
    NE     shift, and go to state 91
    OR     shift, and go to state 92
    PLUS   shift, and go to state 93
    RPAR   shift, and go to state 106

    Aux8  go to state 94


state 78

   56 Expr: MINUS Expr .
   58     | Expr . Aux8 Expr

    $default  reduce using rule 56 (Expr)

    Aux8  go to state 94


state 79

   55 Expr: NOT Expr .
   58     | Expr . Aux8 Expr

    AND    shift, and go to state 81
    STAR   shift, and go to state 82
    DIV    shift, and go to state 83
    EQ     shift, and go to state 84
    GE     shift, and go to state 85
    GT     shift, and go to state 86
    LE     shift, and go to state 87
    LT     shift, and go to state 88
    MINUS  shift, and go to state 89
    MOD    shift, and go to state 90
    NE     shift, and go to state 91
    OR     shift, and go to state 92
    PLUS   shift, and go to state 93

    $default  reduce using rule 55 (Expr)

    Aux8  go to state 94


state 80

   57 Expr: PLUS Expr .
   58     | Expr . Aux8 Expr

    $default  reduce using rule 57 (Expr)

    Aux8  go to state 94


state 81

   65 Aux8: AND .

    $default  reduce using rule 65 (Aux8)


state 82

   61 Aux8: STAR .

    $default  reduce using rule 61 (Aux8)


state 83

   62 Aux8: DIV .

    $default  reduce using rule 62 (Aux8)


state 84

   68 Aux8: EQ .

    $default  reduce using rule 68 (Aux8)


state 85

   71 Aux8: GE .

    $default  reduce using rule 71 (Aux8)


state 86

   67 Aux8: GT .

    $default  reduce using rule 67 (Aux8)


state 87

   70 Aux8: LE .

    $default  reduce using rule 70 (Aux8)


state 88

   66 Aux8: LT .

    $default  reduce using rule 66 (Aux8)


state 89

   60 Aux8: MINUS .

    $default  reduce using rule 60 (Aux8)


state 90

   63 Aux8: MOD .

    $default  reduce using rule 63 (Aux8)


state 91

   69 Aux8: NE .

    $default  reduce using rule 69 (Aux8)


state 92

   64 Aux8: OR .

    $default  reduce using rule 64 (Aux8)


state 93

   59 Aux8: PLUS .

    $default  reduce using rule 59 (Aux8)


state 94

   58 Expr: Expr Aux8 . Expr

    LPAR     shift, and go to state 58
    MINUS    shift, and go to state 59
    NOT      shift, and go to state 60
    PLUS     shift, and go to state 61
    INTLIT   shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64

    FuncInvocation  go to state 66
    Expr            go to state 107


state 95

   40 Aux3: Statement SEMICOLON . Aux3

    RETURN  shift, and go to state 46
    LBRACE  shift, and go to state 47
    FOR     shift, and go to state 49
    IF      shift, and go to state 50
    PRINT   shift, and go to state 51
    ID      shift, and go to state 52

    $default  reduce using rule 41 (Aux3)

    Statement       go to state 68
    Aux3            go to state 108
    ParseArgs       go to state 56
    FuncInvocation  go to state 57


state 96

   29 Statement: LBRACE Aux3 RBRACE .

    $default  reduce using rule 29 (Statement)


state 97

   31 Statement: FOR ExprOpt LBRACE . Aux3 RBRACE

    RETURN  shift, and go to state 46
    LBRACE  shift, and go to state 47
    FOR     shift, and go to state 49
    IF      shift, and go to state 50
    PRINT   shift, and go to state 51
    ID      shift, and go to state 52

    $default  reduce using rule 41 (Aux3)

    Statement       go to state 68
    Aux3            go to state 109
    ParseArgs       go to state 56
    FuncInvocation  go to state 57


state 98

   30 Statement: IF Expr LBRACE . Aux3 RBRACE Aux4

    RETURN  shift, and go to state 46
    LBRACE  shift, and go to state 47
    FOR     shift, and go to state 49
    IF      shift, and go to state 50
    PRINT   shift, and go to state 51
    ID      shift, and go to state 52

    $default  reduce using rule 41 (Aux3)

    Statement       go to state 68
    Aux3            go to state 110
    ParseArgs       go to state 56
    FuncInvocation  go to state 57


state 99

   36 Aux6: STRLIT .

    $default  reduce using rule 36 (Aux6)


state 100

   35 Statement: PRINT LPAR Aux6 . RPAR

    RPAR  shift, and go to state 111


state 101

   37 Aux6: Expr .
   58 Expr: Expr . Aux8 Expr

    AND    shift, and go to state 81
    STAR   shift, and go to state 82
    DIV    shift, and go to state 83
    EQ     shift, and go to state 84
    GE     shift, and go to state 85
    GT     shift, and go to state 86
    LE     shift, and go to state 87
    LT     shift, and go to state 88
    MINUS  shift, and go to state 89
    MOD    shift, and go to state 90
    NE     shift, and go to state 91
    OR     shift, and go to state 92
    PLUS   shift, and go to state 93

    $default  reduce using rule 37 (Aux6)

    Aux8  go to state 94


state 102

   28 Statement: ID ASSIGN Expr .
   58 Expr: Expr . Aux8 Expr

    AND    shift, and go to state 81
    STAR   shift, and go to state 82
    DIV    shift, and go to state 83
    EQ     shift, and go to state 84
    GE     shift, and go to state 85
    GT     shift, and go to state 86
    LE     shift, and go to state 87
    LT     shift, and go to state 88
    MINUS  shift, and go to state 89
    MOD    shift, and go to state 90
    NE     shift, and go to state 91
    OR     shift, and go to state 92
    PLUS   shift, and go to state 93

    $default  reduce using rule 28 (Statement)

    Aux8  go to state 94


state 103

   44 ParseArgs: ID COMMA BLANKID . ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR

    ASSIGN  shift, and go to state 112


state 104

   45 FuncInvocation: ID LPAR Aux40 . RPAR

    RPAR  shift, and go to state 113


state 105

   46 Aux40: Expr . Aux41
   58 Expr: Expr . Aux8 Expr

    AND    shift, and go to state 81
    STAR   shift, and go to state 82
    COMMA  shift, and go to state 114
    DIV    shift, and go to state 83
    EQ     shift, and go to state 84
    GE     shift, and go to state 85
    GT     shift, and go to state 86
    LE     shift, and go to state 87
    LT     shift, and go to state 88
    MINUS  shift, and go to state 89
    MOD    shift, and go to state 90
    NE     shift, and go to state 91
    OR     shift, and go to state 92
    PLUS   shift, and go to state 93

    $default  reduce using rule 49 (Aux41)

    Aux41  go to state 115
    Aux8   go to state 94


state 106

   54 Expr: LPAR Expr RPAR .

    $default  reduce using rule 54 (Expr)


state 107

   58 Expr: Expr . Aux8 Expr
   58     | Expr Aux8 Expr .

    AND    shift, and go to state 81
    STAR   shift, and go to state 82
    DIV    shift, and go to state 83
    EQ     shift, and go to state 84
    GE     shift, and go to state 85
    GT     shift, and go to state 86
    LE     shift, and go to state 87
    LT     shift, and go to state 88
    MINUS  shift, and go to state 89
    MOD    shift, and go to state 90
    NE     shift, and go to state 91
    OR     shift, and go to state 92
    PLUS   shift, and go to state 93

    AND       [reduce using rule 58 (Expr)]
    STAR      [reduce using rule 58 (Expr)]
    DIV       [reduce using rule 58 (Expr)]
    EQ        [reduce using rule 58 (Expr)]
    GE        [reduce using rule 58 (Expr)]
    GT        [reduce using rule 58 (Expr)]
    LE        [reduce using rule 58 (Expr)]
    LT        [reduce using rule 58 (Expr)]
    MINUS     [reduce using rule 58 (Expr)]
    MOD       [reduce using rule 58 (Expr)]
    NE        [reduce using rule 58 (Expr)]
    OR        [reduce using rule 58 (Expr)]
    PLUS      [reduce using rule 58 (Expr)]
    $default  reduce using rule 58 (Expr)

    Aux8  go to state 94


state 108

   40 Aux3: Statement SEMICOLON Aux3 .

    $default  reduce using rule 40 (Aux3)


state 109

   31 Statement: FOR ExprOpt LBRACE Aux3 . RBRACE

    RBRACE  shift, and go to state 116


state 110

   30 Statement: IF Expr LBRACE Aux3 . RBRACE Aux4

    RBRACE  shift, and go to state 117


state 111

   35 Statement: PRINT LPAR Aux6 RPAR .

    $default  reduce using rule 35 (Statement)


state 112

   44 ParseArgs: ID COMMA BLANKID ASSIGN . PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR

    PARSEINT  shift, and go to state 118


state 113

   45 FuncInvocation: ID LPAR Aux40 RPAR .

    $default  reduce using rule 45 (FuncInvocation)


state 114

   48 Aux41: COMMA . Expr Aux41

    LPAR     shift, and go to state 58
    MINUS    shift, and go to state 59
    NOT      shift, and go to state 60
    PLUS     shift, and go to state 61
    INTLIT   shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64

    FuncInvocation  go to state 66
    Expr            go to state 119


state 115

   46 Aux40: Expr Aux41 .

    $default  reduce using rule 46 (Aux40)


state 116

   31 Statement: FOR ExprOpt LBRACE Aux3 RBRACE .

    $default  reduce using rule 31 (Statement)


state 117

   30 Statement: IF Expr LBRACE Aux3 RBRACE . Aux4

    ELSE  shift, and go to state 120

    $default  reduce using rule 43 (Aux4)

    Aux4  go to state 121


state 118

   44 ParseArgs: ID COMMA BLANKID ASSIGN PARSEINT . LPAR CMDARGS LSQ Expr RSQ RPAR

    LPAR  shift, and go to state 122


state 119

   48 Aux41: COMMA Expr . Aux41
   58 Expr: Expr . Aux8 Expr

    AND    shift, and go to state 81
    STAR   shift, and go to state 82
    COMMA  shift, and go to state 114
    DIV    shift, and go to state 83
    EQ     shift, and go to state 84
    GE     shift, and go to state 85
    GT     shift, and go to state 86
    LE     shift, and go to state 87
    LT     shift, and go to state 88
    MINUS  shift, and go to state 89
    MOD    shift, and go to state 90
    NE     shift, and go to state 91
    OR     shift, and go to state 92
    PLUS   shift, and go to state 93

    $default  reduce using rule 49 (Aux41)

    Aux41  go to state 123
    Aux8   go to state 94


state 120

   42 Aux4: ELSE . LBRACE Aux3 RBRACE

    LBRACE  shift, and go to state 124


state 121

   30 Statement: IF Expr LBRACE Aux3 RBRACE Aux4 .

    $default  reduce using rule 30 (Statement)


state 122

   44 ParseArgs: ID COMMA BLANKID ASSIGN PARSEINT LPAR . CMDARGS LSQ Expr RSQ RPAR

    CMDARGS  shift, and go to state 125


state 123

   48 Aux41: COMMA Expr Aux41 .

    $default  reduce using rule 48 (Aux41)


state 124

   42 Aux4: ELSE LBRACE . Aux3 RBRACE

    RETURN  shift, and go to state 46
    LBRACE  shift, and go to state 47
    FOR     shift, and go to state 49
    IF      shift, and go to state 50
    PRINT   shift, and go to state 51
    ID      shift, and go to state 52

    $default  reduce using rule 41 (Aux3)

    Statement       go to state 68
    Aux3            go to state 126
    ParseArgs       go to state 56
    FuncInvocation  go to state 57


state 125

   44 ParseArgs: ID COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS . LSQ Expr RSQ RPAR

    LSQ  shift, and go to state 127


state 126

   42 Aux4: ELSE LBRACE Aux3 . RBRACE

    RBRACE  shift, and go to state 128


state 127

   44 ParseArgs: ID COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ . Expr RSQ RPAR

    LPAR     shift, and go to state 58
    MINUS    shift, and go to state 59
    NOT      shift, and go to state 60
    PLUS     shift, and go to state 61
    INTLIT   shift, and go to state 62
    ID       shift, and go to state 63
    REALLIT  shift, and go to state 64

    FuncInvocation  go to state 66
    Expr            go to state 129


state 128

   42 Aux4: ELSE LBRACE Aux3 RBRACE .

    $default  reduce using rule 42 (Aux4)


state 129

   44 ParseArgs: ID COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr . RSQ RPAR
   58 Expr: Expr . Aux8 Expr

    AND    shift, and go to state 81
    STAR   shift, and go to state 82
    DIV    shift, and go to state 83
    EQ     shift, and go to state 84
    GE     shift, and go to state 85
    GT     shift, and go to state 86
    LE     shift, and go to state 87
    LT     shift, and go to state 88
    MINUS  shift, and go to state 89
    MOD    shift, and go to state 90
    NE     shift, and go to state 91
    OR     shift, and go to state 92
    PLUS   shift, and go to state 93
    RSQ    shift, and go to state 130

    Aux8  go to state 94


state 130

   44 ParseArgs: ID COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ . RPAR

    RPAR  shift, and go to state 131


state 131

   44 ParseArgs: ID COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR .

    $default  reduce using rule 44 (ParseArgs)
